src/test/ui/nll/move-subpaths-moves-root.stderr
error[E0382]: use of partially moved value: `x`
  --> $DIR/move-subpaths-moves-root.rs:4:10
   |
LL |     drop(x.0);
   |          --- value partially moved here
LL |     drop(x);
   |          ^ value used here after partial move
   |
   = note: partial move occurs because `x.0` has type `Vec<i32>`, which does not implement the `Copy` trait
help: consider cloning `x.0`
   |
LL |     drop(x.0.clone());
   |             ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
